syntax = "proto3";

package proto;

option go_package = "./proto";

service Records {
  rpc Create(RecordInput) returns (Uuid) {}
  rpc GetByUuid(Uuid) returns (Record) {}
  rpc GetByFilter(RecordInput) returns (RecordList) {}
  rpc Update(Record) returns (Empty) {}
  rpc Delete(Uuid) returns (Empty) {}
}

message Record {
  string uuid = 1;
  string first_name = 2;
  string last_name = 3;
  string mobile_phone = 4;
  string home_phone = 5;
}

message RecordInput {
  string first_name = 1;
  string last_name = 2;
  string mobile_phone = 3;
  string home_phone = 4;
}

message Uuid {
  string uuid = 1;
}

message RecordList {
  repeated Record records = 1;
}

message Empty {}